# my-auto-annotation

./: .gitignore  main.py  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py
app/core/: api.py  parse.py  prompt.py
app/templates/: __init__.py  one-pass.j2  prompt.j2
app/utils/: browser.py  css.py  dom.py  find.py  llm.py  log.py  loop.py  uuid.py
