[project]
name = "auto-annotation"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "ruff~=0.6.5",
    "playwright~=1.47.0",
    "promplate[openai]~=0.3.4.9",
    "promptools[tokenizer]~=0.1.3.5",
    "parsel~=1.9.1",
    "rich~=13.8.1",
]

[tool.uv]
dev-dependencies = [
    "python-dotenv~=1.0.1",
]
