[project]
name = "auto-annotation"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "ruff~=0.9.0",
    "playwright~=1.49.0",
    "promplate[openai]~=0.3.4.9",
    "promptools[tokenizer]~=0.1.3.5",
    "parsel~=1.10.0",
    "rich~=13.9.1",
]

[tool.uv]
dev-dependencies = [
    "python-dotenv~=1.0.1",
]

[tool.ruff.lint]
extend-select = [
    "F",    # flake8
    "I",    # isort
    "N",    # pep8-naming
    "W",    # pycodestyle
    "UP",   # pyupgrade
    "TRY",  # tryceratops
    "RUF",  # ruff
    "FURB", # refurb
    "C4",   # flake8-comprehensions
    "ARG",  # flake8-unused-arguments
    "PIE",  # flake8-pie
    "PTH",  # flake8-use-pathlib
    "RSE",  # flake8-raise
    "SIM",  # flake8-simplify
    "SLF",  # flake8-self
]